# orxhestra-code

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-homebrew.yml
.orx/: AGENTS.md
orxhestra_code/: __init__.py  approval.py  claude_md.py  config.py  main.py  permissions.py  prompt.py
orxhestra_code/tools/: __init__.py  plan_mode.py  web.py
tests/: __init__.py  test_claude_md.py  test_cli_runtime.py  test_config.py  test_permissions.py  test_prompt.py  test_web.py
