[project]
name = "orxhestra-code"
version = "0.1.2"
description = "AI coding agent powered by orxhestra — reads, writes, edits code and runs commands"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Nicolai M. T. Lassen"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "orxhestra[cli]>=0.1.3",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
openai = ["orxhestra[openai]>=0.1.3"]
anthropic = ["orxhestra[anthropic]>=0.1.3"]
google = ["orxhestra[google]>=0.1.3"]
google-vertexai = ["orxhestra[google-vertexai]>=0.1.3"]
aws = ["orxhestra[aws]>=0.1.3"]
azure-ai = ["orxhestra[azure-ai]>=0.1.3"]
mistral = ["orxhestra[mistral]>=0.1.3"]
cohere = ["orxhestra[cohere]>=0.1.3"]
fireworks = ["orxhestra[fireworks]>=0.1.3"]
together = ["orxhestra[together]>=0.1.3"]
groq = ["orxhestra[groq]>=0.1.3"]
nvidia = ["orxhestra[nvidia]>=0.1.3"]
huggingface = ["orxhestra[huggingface]>=0.1.3"]
deepseek = ["orxhestra[deepseek]>=0.1.3"]
ollama = ["orxhestra[ollama]>=0.1.3"]
xai = ["orxhestra[xai]>=0.1.3"]
ibm = ["orxhestra[ibm]>=0.1.3"]
perplexity = ["orxhestra[perplexity]>=0.1.3"]
openrouter = ["orxhestra[openrouter]>=0.1.3"]
upstage = ["orxhestra[upstage]>=0.1.3"]
web = ["ddgs>=9.0.0", "httpx>=0.28.0", "trafilatura>=1.12.0"]
all = ["orxhestra[all]>=0.1.3", "ddgs>=9.0.0", "httpx>=0.28.0", "trafilatura>=1.12.0"]

[project.scripts]
orx-coder = "orxhestra_code.main:main"

[project.urls]
Homepage = "https://github.com/NicolaiLassen/orxhestra-code"
Repository = "https://github.com/NicolaiLassen/orxhestra-code"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orxhestra_code*"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
